--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize metadata on-the-fly\n",
+    "# Cell type annotation and pathway analysis\n",
     "\n",
-    "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run the [GO Ontology](enrichr.ipynb) notebook before executing this use case.\n",
-    "\n",
-    "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries.\n",
-    "\n",
-    "For more information, see:\n",
-    "- {doc}`docs:public-ontologies`\n",
-    "- {doc}`docs:bio-registries`\n",
-    "- {doc}`docs:curate`\n",
-    "- {doc}`docs:scrna`"
+    "Please make sure that you run the [GO Ontology](enrichr.ipynb) notebook before this one so that your `CellType` and `Pathway` registries are populated."
    ]
   },
   {
@@ -32,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pip install lamindb,scanpy,celltypist,gseapy\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
@@ -39,15 +32,6 @@
     "import matplotlib.pyplot as plt\n",
     "import celltypist\n",
     "import gseapy as gp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track(\"hsPU1OENv0LS0000\")"
    ]
   },
   {
@@ -61,13 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A small peripheral blood mononuclear cell dataset that is split into control and stimulated groups. The stimulated group was treated with interferon beta."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A small peripheral blood mononuclear cell dataset that is split into control and stimulated groups. The stimulated group was treated with interferon beta.\n",
     "Let's load the dataset and perform some preprocessing:"
    ]
   },
@@ -99,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis: cell type annotation using CellTypist"
+    "## Analysis: Cell type annotation using CellTypist"
    ]
   },
   {
@@ -215,7 +193,6 @@
     "    (rank_genes_groups_df[\"logfoldchanges\"] < 0)\n",
     "    & (rank_genes_groups_df[\"pvals_adj\"] < 0.05)\n",
     "]\n",
-    "\n",
     "degs_up.shape, degs_dw.shape"
    ]
   },
@@ -266,26 +243,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_features = ln.Feature.from_dataframe(adata.obs)\n",
-    "ln.save(new_features)\n",
-    "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
-    "ln.save(new_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.lookup()"
+    "ln.Feature(name=\"cell_type_celltypist\", dtype=bt.CellType).save()\n",
+    "ln.Feature(name=\"stim\", dtype=str).save()\n",
+    "obs_schema = ln.Schema(\n",
+    "    name=\"celltype_obs_schema\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"cell_type_celltypist\", dtype=bt.CellType).save(),\n",
+    "        ln.Feature(name=\"stim\", dtype=str).save(),\n",
+    "    ],\n",
+    ").save()\n",
+    "var_schema = ln.Schema(\n",
+    "    name=\"gene_var_schema\",\n",
+    "    itype=bt.Gene,\n",
+    ").save()\n",
+    "\n",
+    "schema = ln.Schema(\n",
+    "    name=\"anndata_seurat_ifnb_schema\",\n",
+    "    slots={\"obs\": obs_schema, \"var.T\": var_schema},\n",
+    "    otype=\"AnnData\",\n",
+    ").save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register dataset using a Artifact object:"
+    "Register dataset using an `Artifact` object:"
    ]
   },
   {
@@ -297,7 +280,23 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
-    ").save()"
+    "    schema=schema,\n",
+    ").save()\n",
+    "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manage pathway objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create two schemas (two feature sets) for `degs_up` and `degs_dw`:"
    ]
   },
   {
@@ -306,64 +305,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: rewrite based on ln.curators.AnnDataCurator()\n",
-    "# artifact.features._add_set_from_anndata(\n",
-    "#     var_field=bt.Gene.symbol,\n",
-    "#     organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "# )\n",
-    "# cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
-    "# artifact.labels.add(cell_type_records, features.cell_type_celltypist)\n",
-    "# stim_records = ln.ULabel.from_values(adata.obs[\"stim\"])\n",
-    "# artifact.labels.add(stim_records, features.stim)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Link pathway labels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's enable tracking of the current notebook as the transform of this artifact:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We further create two feature sets for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_up_featureset = ln.Schema.from_values(\n",
+    "schema_degs_up = ln.Schema.from_values(\n",
     "    degs_up.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
-    ")\n",
-    "degs_dw_featureset = ln.Schema.from_values(\n",
+    "    organism=\"human\",\n",
+    ").save()\n",
+    "schema_degs_dw = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "# Link feature sets to artifact\n",
-    "artifact.features._add_schema(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "artifact.features._add_schema(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
+    "    organism=\"human\",\n",
+    ").save()"
    ]
   },
   {
@@ -399,7 +352,7 @@
     "    for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_enrichr_results)\n",
     "]\n",
     "\n",
-    "# get pathway records\n",
+    "# get pathway objects\n",
     "enr_up_top10_pathways = bt.Pathway.from_values(enr_up_top10, bt.Pathway.ontology_id)\n",
     "enr_dw_top10_pathways = bt.Pathway.from_values(enr_dw_top10, bt.Pathway.ontology_id)"
    ]
@@ -417,17 +370,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset.pathways.set(enr_up_top10_pathways)\n",
-    "degs_dw_featureset.pathways.set(enr_dw_top10_pathways)\n",
-    "\n",
-    "degs_up_featureset.pathways.to_list(\"name\")"
+    "schema_degs_up.pathways.set(enr_up_top10_pathways)\n",
+    "schema_degs_dw.pathways.set(enr_dw_top10_pathways)\n",
+    "schema_degs_up.pathways.to_list(\"name\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Querying pathways"
+    "With this, we stored the result of the differential expression analysis via schema objects where each schema object links a gene set and its set of enriched pathways in the dataset.\n",
+    "\n",
+    "This allows queries along the lines below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query pathways"
    ]
   },
   {
@@ -440,7 +401,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bt.Pathway.filter(name__contains=\"interferon-beta\").to_dataframe()"
@@ -456,10 +421,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").to_dataframe()"
+    "bt.Pathway.filter(genes__symbol=\"IFITM1\").to_dataframe()"
    ]
   },
   {
@@ -482,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query featuresets from a pathway to learn from which geneset this pathway was computed:"
+    "Query schemas from a pathway to learn from which geneset this pathway was computed:"
    ]
   },
   {
@@ -508,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can get the list of genes that are differentially expressed and belong to this pathway:"
+    "Get the list of genes that are differentially expressed and belong to this pathway:"
    ]
   },
   {
@@ -524,22 +493,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete --force use-cases-registries\n",
-    "!rm -r ./use-cases-registries"
+    "!rm -r ./use-cases-registries\n",
+    "!lamin delete --force use-cases-registries"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "hsPU1OENv0LS",
