--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/celltypist.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fcelltypist.ipynb)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -21,12 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell types classify cells based on public and private knowledge from studying transcription, morphology, function & other properties.\n",
-    "Established cell types have well-characterized markers and properties; however, cell subtypes and states are continuously being discovered, refined and better understood.\n",
+    "Here, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
     "\n",
-    "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
-    "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to curate datasets analyzed with CellTypist enrichment analysis and track the dataset with LaminDB."
+    "In the following [Cell type annotation and pathway analysis](analysis-registries) guide, we will re-use this vocabulary."
    ]
   },
   {
@@ -39,24 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin load use-cases-registries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# filter warnings from celltypist\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", message=\".*The 'nopython' keyword.*\")"
+    "# pip install lamindb\n",
+    "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
   {
@@ -66,7 +39,8 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt"
+    "import bionty as bt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -91,8 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "description = \"CellTypist Pan Immune Atlas v2: basic cell type information\"\n",
     "celltypist_source_v2_url = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
     "\n",
@@ -144,7 +116,7 @@
     "\n",
     "This will avoid that we'll refer to the same cell type with different identifiers.\n",
     "\n",
-    "We need a `Bionty` object for this:"
+    "We need a public ontology for this. Let's first get the `CL` ontology source."
    ]
   },
   {
@@ -153,7 +125,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty = bt.CellType.public()\n",
+    "source = bt.Source.get(name=\"cl\")\n",
+    "source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bionty = bt.CellType.public(source=source)\n",
     "bionty"
    ]
   },
@@ -178,9 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This looks good!\n",
-    "\n",
-    "But when inspecting the names, most of them don't validate:"
+    "This looks good! But when inspecting the names, most of them don't validate:"
    ]
   },
   {
@@ -233,8 +213,7 @@
    "outputs": [],
    "source": [
     "bionty.inspect(\n",
-    "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]],\n",
-    "    bionty.name,\n",
+    "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]], field=\"name\"\n",
     ");"
    ]
   },
@@ -329,8 +308,7 @@
    "source": [
     "public_records = bt.CellType.from_values(\n",
     "    celltypist_df.ontology_id, bt.CellType.ontology_id\n",
-    ")\n",
-    "ln.save(public_records)"
+    ").save()"
    ]
   },
   {
@@ -351,15 +329,15 @@
    },
    "outputs": [],
    "source": [
-    "from lamindb.core.exceptions import ValidationError\n",
-    "\n",
     "public_records_dict = {r.ontology_id: r for r in public_records}\n",
     "\n",
     "for _, row in celltypist_df.iterrows():\n",
     "    record = public_records_dict[row[\"ontology_id\"]]\n",
     "    try:\n",
     "        record.add_synonym(row[\"ct_name\"])\n",
-    "    except ValidationError:  # do nothing if the synonym already exists as a record\n",
+    "    except (\n",
+    "        ln.errors.ValidationError\n",
+    "    ):  # do nothing if the synonym already exists as a record\n",
     "        pass"
    ]
   },
@@ -570,13 +548,6 @@
    "source": [
     "db_lookup.memory_b_cell.parents.to_list()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Move on to the next registry: [GO pathways](enrichr)"
-   ]
   }
  ],
  "metadata": {
@@ -584,7 +555,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
