--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,11 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
-    "\n",
     "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the steps of registering pathways and link them to genes.\n",
     "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
+    "In the [Cell type annotation and pathway analysis](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
    ]
   },
   {
@@ -37,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]'\n",
+    "# pip install lamindb,gseapy\n",
     "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
@@ -49,9 +47,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "import gseapy as gp\n",
-    "\n",
-    "bt.settings.organism = \"human\"  # globally set organism"
+    "import gseapy as gp"
    ]
   },
   {
@@ -67,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we fetch the \"GO_Biological_Process_2023\" pathways for humans using [GSEApy](https://github.com/zqfang/GSEApy) which wraps [GSEA](https://www.gsea-msigdb.org/gsea/index.jsp) and [Enrichr](https://maayanlab.cloud/Enrichr/)."
+    "First we fetch the `\"GO_Biological_Process_2023\"` pathways for humans using [GSEApy](https://github.com/zqfang/GSEApy) which wraps [GSEA](https://www.gsea-msigdb.org/gsea/index.jsp) and [Enrichr](https://maayanlab.cloud/Enrichr/)."
    ]
   },
   {
@@ -76,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "go_bp = gp.get_library(name=\"GO_Biological_Process_2023\", organism=\"Human\")\n",
+    "go_bp = gp.get_library(name=\"GO_Biological_Process_2025\", organism=\"Human\")\n",
     "print(f\"Number of pathways {len(go_bp)}\")"
    ]
   },
@@ -109,8 +105,7 @@
     "    \"ATF6-mediated Unfolded Protein Response (GO:0036500)\" -> (\"GO:0036500\", \"ATF6-mediated Unfolded Protein Response\")\n",
     "    \"\"\"\n",
     "    name, id = key.rsplit(\" (\", 1)\n",
-    "    id = id.rstrip(\")\")\n",
-    "    return id, name"
+    "    return id.rstrip(\")\"), name"
    ]
   },
   {
@@ -119,11 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "go_bp_parsed = {}\n",
-    "\n",
-    "for key, genes in go_bp.items():\n",
-    "    id, name = parse_ontology_id_from_keys(key)\n",
-    "    go_bp_parsed[id] = (name, genes)"
+    "go_bp_parsed = {\n",
+    "    parse_ontology_id_from_keys(k)[0]: (parse_ontology_id_from_keys(k)[1], v)\n",
+    "    for k, v in go_bp.items()\n",
+    "}"
    ]
   },
   {
@@ -146,6 +140,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = bt.Source.get(name=\"go\")\n",
+    "source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -153,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "bionty = bt.Pathway.public()\n",
+    "bionty = bt.Pathway.public(source=source)\n",
     "bionty"
    ]
   },
@@ -184,11 +188,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)\n",
-    "ln.save(pathway_records)"
+    "pathways = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id).save()"
    ]
   },
   {
@@ -210,32 +217,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "all_genes = bt.Gene.standardize(list({g for genes in go_bp.values() for g in genes}))\n",
-    "gene_records = bt.Gene.from_values(all_genes, bt.Gene.symbol)\n",
-    "ln.save(gene_records);"
+    "all_genes = bt.Gene.standardize(sum(go_bp.values(), []), organism=\"human\")\n",
+    "genes = bt.Gene.from_values(all_genes, organism=\"human\").save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Manually register the 37 non-validated symbols:"
+    "Manually register the 32 non-validated symbols:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "inspect_result = bt.Gene.inspect(all_genes, bt.Gene.symbol)\n",
+    "inspect_result = bt.Gene.inspect(all_genes, organism=\"human\")\n",
+    "organism = bt.Organism.get(name=\"human\")\n",
     "\n",
     "nonval_genes = []\n",
     "for g in inspect_result.non_validated:\n",
-    "    nonval_genes.append(bt.Gene(symbol=g))\n",
+    "    nonval_genes.append(bt.Gene(symbol=g, organism=organism))\n",
     "\n",
     "ln.save(nonval_genes)"
    ]
@@ -262,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols_gene_records = {record.symbol: record for record in gene_records}"
+    "symbols_genes = {record.symbol: record for record in genes}"
    ]
   },
   {
@@ -271,10 +286,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for pathway_record in pathway_records:\n",
-    "    pathway_genes = go_bp_parsed.get(pathway_record.ontology_id)[1]\n",
-    "    pathway_genes_records = [symbols_gene_records.get(gene) for gene in pathway_genes]\n",
-    "    pathway_record.genes.set(pathway_genes_records)"
+    "for pathway in pathways:\n",
+    "    pathway_genes = go_bp_parsed.get(pathway.ontology_id)[1]\n",
+    "    pathway_genes_records = [symbols_genes.get(gene) for gene in pathway_genes]\n",
+    "    pathway.genes.set(pathway_genes_records)"
    ]
   },
   {
@@ -291,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.to_list(\"symbol\")"
+    "pathway.genes.to_list(\"symbol\")"
    ]
   },
   {
@@ -300,14 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.to_list(\"ensembl_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Move on to the next analysis: [Standardize metadata on-the-fly](analysis-registries.ipynb)"
+    "pathway.genes.to_list(\"ensembl_gene_id\")"
    ]
   }
  ],
@@ -316,7 +324,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
